# ViralScan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  PROGRESS.md  README.md  Singularity.def  environment.yml  getting_started.ipynb  pyproject.toml
.github/prompts/: audit-to-tdd-plan.prompt.md  viralscan-scientific-audit.prompt.md
.github/workflows/: ci.yml  release.yml
audits/: 2026-05-08-full-pipeline.md
docs/: api.md  cli_reference.md  conf.py  faq.md  index.md  installation.md  output_reference.md  quickstart.md  reference_panel.md  requirements.txt  write-docs-prompt.md
docs/vignettes/: basic_usage.ipynb  cell_type_enrichment.ipynb
src/viralscan/: Snakefile  __main__.py  constants.py  data_fetch.py  defaults.py  enrichment.py  menu.py  multimapping.py  utils.py
src/viralscan/data/: Adeno_associated_virus_NC_001401.gtf  Aichi_virus_NC_001918.gtf  Alphatorquevirus homin1.gtf  Alphatorquevirus homin10.gtf  Alphatorquevirus homin13.gtf  Alphatorquevirus homin15.gtf  Alphatorquevirus homin19.gtf  Alphatorquevirus homin2.gtf  Alphatorquevirus homin20.gtf  Alphatorquevirus homin21.gtf  Alphatorquevirus homin24.gtf  Alphatorquevirus homin29.gtf  Alphatorquevirus homin3.gtf  Alphatorquevirus homin5.gtf  Alphatorquevirus homin6.gtf  Alphatorquevirus homin7.gtf  Alphatorquevirus homin9.gtf  Australian_bat_lyssavirus_NC_003243.gtf  BK_polyomavirus_NC_001538.gtf  Banna_virus_NC_004200.gtf  Banna_virus_NC_004201.gtf  Banna_virus_NC_004202.gtf  Banna_virus_NC_004203.gtf  Banna_virus_NC_004204.gtf  Banna_virus_NC_004211.gtf  Banna_virus_NC_004217.gtf  Banna_virus_NC_004218.gtf  Banna_virus_NC_004219.gtf  Banna_virus_NC_004220.gtf  Banna_virus_NC_004221.gtf  Barmah_forest_virus_NC_001786.gtf  Bunyamwera_virus_NC_001925.gtf  Bunyamwera_virus_NC_001926.gtf  Bunyamwera_virus_NC_001927.gtf  Bunyavirus_La_Crosse_NC_004108.gtf  Bunyavirus_La_Crosse_NC_004109.gtf  Bunyavirus_La_Crosse_NC_004110.gtf  Cercopithecine_herpesvirus_NC_006560.gtf  Chikungunya_virus_NC_004162.gtf  Cosavirus_A_NC_012800.gtf  (+155 more)
src/viralscan/scripts/: analysis.py  build_reference.py  createconfig.py  detection.py  host_filter.py  multimap.py  ncbi_fetch.py  umap.py
src/viralscan/templates/: report.html.j2
tests/: conftest.py  test_analysis.py  test_build_reference.py  test_cli.py  test_constants.py  test_createconfig.py  test_data_fetch.py  test_detection.py  test_errorhandler.py  test_multimap.py  test_multimapping.py  test_ncbi_fetch.py  test_umap.py
tests/integration/: __init__.py  test_pipeline_counts.py  test_smoke.py
