[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ViralScan"
version = "2.2.0"
description = "A computational framework to detect viral load."
authors = [
    {name="Emma Vonk", email="emma.vonk@hotmail.nl"}
]
license = {file = "LICENSE"}
dependencies = [
    "snakemake>=7.0.0",
    "pyfiglet",
    "scanpy",
    "pandas",
    "plotly",
    "numpy",
    "matplotlib",
    "scipy",
    "seaborn",
    "pyyaml",
    "requests>=2.28",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "responses",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
viralscan = "viralscan.menu:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"viralscan" = ["Snakefile", "data/*.gtf"]

[project.urls]
"Homepage" = "https://github.com/emmaevonk/ViralScan"
"Bug Tracker" = "https://github.com/emmaevonk/ViralScan/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "network: tests that hit the live NCBI API",
    "integration: end-to-end Snakemake smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"
