[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ViralScan"
version = "2.2.0"
description = "A computational framework to detect viral load."
authors = [
    {name="Emma Vonk", email="emma.vonk@hotmail.nl"}
]
license = {file = "LICENSE"}
dependencies = [
    "snakemake>=7.0.0",
    "pyfiglet",
    "scanpy",
    "pandas",
    "plotly",
    "numpy",
    "matplotlib",
    "scipy",
    "seaborn",
    "pyyaml",
    "requests>=2.28",
    "jinja2>=3.0",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "responses",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
viralscan = "viralscan.menu:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"viralscan" = ["Snakefile", "templates/*.j2"]

[project.urls]
"Homepage" = "https://github.com/emmaevonk/ViralScan"
"Bug Tracker" = "https://github.com/emmaevonk/ViralScan/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not network and not integration'"
markers = [
    "network: tests that hit the live NCBI API",
    "integration: end-to-end Snakemake smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Conservative ruleset to start: pycodestyle errors + pyflakes. Future PRs
# (see PLAN.md PR 3 / PR 9) will tighten this.
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]  # line length is enforced by the formatter

[tool.ruff.lint.per-file-ignores]
# Snakemake script files receive an implicit ``snakemake`` global injected
# by the Snakemake runner; they are not standalone Python modules. They
# also contain a few historical issues that PR 3 will clean up.
"src/viralscan/scripts/analysis.py" = ["F821", "F401"]
"src/viralscan/scripts/createconfig.py" = ["F821"]
"src/viralscan/scripts/detection.py" = ["F821", "F401", "F541"]
"src/viralscan/scripts/multimap.py" = ["F821", "F541"]
"src/viralscan/scripts/umap.py" = ["F821", "F401", "F541"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "viralscan.utils",
    "viralscan.constants",
    "viralscan.menu",
    "viralscan.scripts.ncbi_fetch",
    "viralscan.scripts.build_reference",
]
strict = true

[[tool.mypy.overrides]]
module = [
    "viralscan.scripts.analysis",
    "viralscan.scripts.createconfig",
    "viralscan.scripts.detection",
    "viralscan.scripts.multimap",
    "viralscan.scripts.umap",
    "viralscan.scripts.host_filter",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["yaml", "requests", "pyfiglet", "pandas", "scipy", "scipy.stats"]
ignore_missing_imports = true
